@@ -131,6 +131,7 @@ public class Setup {
                 }
         };
         transportExecutor.exec(insertStmt, rows);
+        transportExecutor.refresh("locations");
     }
 
     public void groupBySetup() throws Exception {
@@ -145,7 +146,8 @@ public class Setup {
             " age %s," +
             " birthdate timestamp," +
             " name string," +
-            " details object" +
+            " details object," +
+            " details_ignored object(ignored)" +
             ")", numericType));
         transportExecutor.ensureGreen();
 
@@ -242,6 +244,7 @@ public class Setup {
                         }});
                         put("o", new HashMap<String, Object>(){{
                             put("type", "object");
+                            put("dynamic", false);
                         }});
                         put("population", new HashMap<String, Object>(){{
                             put("type", "long");
@@ -281,7 +284,7 @@ public class Setup {
         transportExecutor.exec("create table parted (" +
                 "id int primary key," +
                 "date timestamp primary key," +
-                "o object" +
+                "o object(ignored)" +
                 ") partitioned by (date) with (number_of_replicas=0)");
         transportExecutor.ensureGreen();
         transportExecutor.exec("insert into parted (id, date) values (1, '2014-01-01')");
