@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Throw an error while using unknown column references in ``SELECT``
+   statements while parent's policy is not of type ``ignored``
+
  - Fix: removed unsupported syntax from ``Update`` synposis
 
  - Support column referencing in ``Update`` statement assignment
